--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 100vh; */
+  height: 100vh;
   color: var(--text-primary);
 }
 
@@ -48,7 +48,7 @@ body {
   padding: 1.25rem;
   /* margin: 2rem 0; */
   background: var(--primary-bg);
-  /* height: 100vh; */
+  height: 100vh;
   /* border-radius: var(--border-radius-lg); */
   /* box-shadow: 8px 8px 16px var(--shadow-dark), -8px -8px 16px var(--shadow-light); */
 }
